Finished price sections naming with  _1, deleated unnecessary sections

--- a/src/html/components/home/price.html
+++ b/src/html/components/home/price.html
@@ -1,29 +1,25 @@
 <!--========PRICE START========  -->
-<section class="price">
-  <div class="price__top pricing-decor">
-    <div class="container">
-      <h2 class="price__title text-p-default">Pricing plans 🤑</h2>
-      <p class="price__desc heading-h1">
+<section class="price_1">
+  <div class="price_1__top pricing-decor price_1_1">
+    <div class="container price_1_1_1">
+      <h2
+        class="price_1__title text-p-default price_1_1_1_1"
+        id="price_1_1_1_1_text"
+      >
+        Pricing plans 🤑
+      </h2>
+      <p
+        class="price_1__desc heading-h1 price_1_1_1_1_1"
+        id="price_1_1_1_1_1_text"
+      >
         Choose a plan for a more advanced business
       </p>
     </div>
-    <label class="price__switcher-wrapper">
-      <span class="price__switcher">
-        <input
-          class="price__switcher-checkbox"
-          type="checkbox"
-          data-price="switcher"
-        />
-      </span>
-      <span class="price__switcher-text text-p-default">
-        Annual pricing (save 20%)
-      </span>
-    </label>
   </div>
-  <div class="container">
-    <ul class="price__plans">
-      <li class="price__item">
-        <div class="price__plans-icon">
+  <div class="container price_1_1_1_1_1_1">
+    <ul class="price_1__plans price_1_1_1_1_1_1_1">
+      <li class="price_1__item price_1_1_1_1_1_1_1_1">
+        <div class="price_1__plans-icon price_1_1_1_1_1_1_1_1">
           <svg
             width="20"
             height="18"
@@ -40,56 +36,40 @@
             />
           </svg>
         </div>
-        <h3 class="price__plans-title text-p-large">Starter</h3>
-        <p class="price__plans-desc text-p-default">
+        <h3
+          class="price_1__plans-title text-p-large price_1_1_1_1_1_1_1_1_1"
+          id="price_1_1_1_1_1_1_1_1_1_text"
+        >
+          Starter
+        </h3>
+        <p
+          class="price_1__plans-desc text-p-default price_1_1_1_1_1_1_1_1_1_1"
+          id="price_1_1_1_1_1_1_1_1_1_1_text"
+        >
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry.
         </p>
-        <div class="price__plans-price heading-h2">
-          <span data-price="starter"> $100 </span>
+        <div
+          class="price_1__plans-price heading-h2 price_1_1_1_1_1_1_1_1_1_1_1"
+        >
           <span
-            class="price__plans-price-text text-p-default"
+            data-price="starter"
+            class="price_1_1_1_1_1_1_1_1_1_1_1_1"
+            id="price_1_1_1_1_1_1_1_1_1_1_1_text"
+          >
+            $100
+          </span>
+          <span
+            class="price_1__plans-price-text text-p-default price_1_1_1_1_1_1_1_1_1_1_1_1_1"
             data-price="plan"
             >/year</span
           >
         </div>
-        <h4 class="price__plans-list-title text-p-default">
-          What’s included:
-        </h4>
-        <ul class="price__plans-list">
-          <li class="price__plans-item text-p-default">Unlimited Upload</li>
-          <li class="price__plans-item text-p-default">Advanced Statistic</li>
-          <li class="price__plans-item text-p-default">Profile Badge</li>
-          <li class="price__plans-item text-p-default">
-            Access to the community
-          </li>
-          <li
-            class="price__plans-item price__plans-item--inaccess text-p-default"
-          >
-            History of all Liked Photos
-          </li>
-          <li
-            class="price__plans-item price__plans-item--inaccess text-p-default"
-          >
-            Directory Listing
-          </li>
-          <li
-            class="price__plans-item price__plans-item--inaccess text-p-default"
-          >
-            Customize Your Profile
-          </li>
-          <li
-            class="price__plans-item price__plans-item--inaccess text-p-default"
-          >
-            Display Your Workshops
-          </li>
-        </ul>
-        <div class="price__plans-btn-wrapper">
-          <button class="price__plans-btn text-p-default">Chose Plan</button>
-        </div>
       </li>
-      <li class="price__item price__item--popular">
-        <div class="price__plans-icon price__plans-icon--popular">
+      <li class="price_1__item price_1__item--popular price_1_1_1_1_1_1_1_1">
+        <div
+          class="price_1__plans-icon price_1__plans-icon--popular price_1_1_1_1_1_1_1_1"
+        >
           <svg
             width="24"
             height="24"
@@ -107,81 +87,36 @@
           </svg>
         </div>
         <h3
-          class="price__plans-title price__plans-title--popular text-p-large"
+          class="price_1__plans-title price_1__plans-title--popular text-p-large price_1_1_1_1_1_1_1_1_1"
+          id="price_1_1_1_1_1_1_1_1_1_1_1_1_text"
         >
           Popular
         </h3>
-        <p class="price__plans-desc text-p-default">
+        <p
+          class="price_1__plans-desc text-p-default price_1_1_1_1_1_1_1_1_1_1"
+          id="price_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+        >
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry.
         </p>
         <div
-          class="price__plans-price price__plans-price--popular heading-h2"
+          class="price_1__plans-price price_1__plans-price--popular heading-h2"
         >
-          <span data-price="popular"> $1400 </span>
           <span
-            class="price__plans-price-text text-p-default"
+            data-price="popular price_1_1_1_1_1_1_1_1_1_1"
+            id="price_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+          >
+            $1400
+          </span>
+          <span
+            class="price_1__plans-price-text text-p-default price_1_1_1_1_1_1_1_1_1_1_1"
             data-price="plan"
             >/year</span
           >
         </div>
-        <h4
-          class="price__plans-list-title price__plans-list-title--popular text-p-default"
-        >
-          What’s included:
-        </h4>
-        <ul class="price__plans-list">
-          <li
-            class="price__plans-item price__plans-item--popular text-p-default"
-          >
-            Unlimited Upload
-          </li>
-          <li
-            class="price__plans-item price__plans-item--popular text-p-default"
-          >
-            Advanced Statistic
-          </li>
-          <li
-            class="price__plans-item price__plans-item--popular text-p-default"
-          >
-            Profile Badge
-          </li>
-          <li
-            class="price__plans-item price__plans-item--popular text-p-default"
-          >
-            Access to the community
-          </li>
-          <li
-            class="price__plans-item price__plans-item--popular price__plans-item--inaccess text-p-default"
-          >
-            History of all Liked Photos
-          </li>
-          <li
-            class="price__plans-item price__plans-item--popular text-p-default"
-          >
-            Directory Listing
-          </li>
-          <li
-            class="price__plans-item price__plans-item--popular price__plans-item--inaccess text-p-default"
-          >
-            Customize Your Profile
-          </li>
-          <li
-            class="price__plans-item price__plans-item--popular price__plans-item--inaccess text-p-default"
-          >
-            Display Your Workshops
-          </li>
-        </ul>
-        <div class="price__plans-btn-wrapper">
-          <button
-            class="price__plans-btn price__plans-btn--popular text-p-default"
-          >
-            Chose Plan
-          </button>
-        </div>
       </li>
-      <li class="price__item">
-        <div class="price__plans-icon">
+      <li class="price_1__item price_1_1_1_1_1_1_1_1">
+        <div class="price_1__plans-icon price_1_1_1_1_1_1_1_1_1">
           <svg
             width="22"
             height="20"
@@ -205,42 +140,33 @@
             />
           </svg>
         </div>
-        <h3 class="price__plans-title text-p-large">Enterprise</h3>
-        <p class="price__plans-desc text-p-default">
+        <h3
+          class="price_1__plans-title text-p-large price_1_1_1_1_1_1_1_1_1"
+          id="price_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+        >
+          Enterprise
+        </h3>
+        <p
+          class="price_1__plans-desc text-p-default price_1_1_1_1_1_1_1_1_1_1"
+          id="price_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+        >
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry.
         </p>
-        <div class="price__plans-price heading-h2">
-          <span data-price="enterprice"> $2100 </span>
+        <div
+          class="price_1__plans-price heading-h2 price_1_1_1_1_1_1_1_1_1_1_1"
+        >
           <span
-            class="price__plans-price-text text-p-default"
+            data-price="enterprice price_1_1_1_1_1_1_1_1_1_1_1_1"
+            id="price_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+          >
+            $2100
+          </span>
+          <span
+            class="price_1__plans-price-text text-p-default price_1_1_1_1_1_1_1_1_1_1_1_1_1"
             data-price="plan"
             >/year</span
           >
-        </div>
-        <h4 class="price__plans-list-title text-p-default">
-          What’s included:
-        </h4>
-        <ul class="price__plans-list">
-          <li class="price__plans-item text-p-default">Unlimited Upload</li>
-          <li class="price__plans-item text-p-default">Advanced Statistic</li>
-          <li class="price__plans-item text-p-default">Profile Badge</li>
-          <li class="price__plans-item text-p-default">
-            Access to the community
-          </li>
-          <li class="price__plans-item text-p-default">
-            History of all Liked Photos
-          </li>
-          <li class="price__plans-item text-p-default">Directory Listing</li>
-          <li class="price__plans-item text-p-default">
-            Customize Your Profile
-          </li>
-          <li class="price__plans-item text-p-default">
-            Display Your Workshops
-          </li>
-        </ul>
-        <div class="price__plans-btn-wrapper">
-          <button class="price__plans-btn text-p-default">Chose Plan</button>
         </div>
       </li>
     </ul>
