Finished features section naming with _1 and renamed all images

--- a/src/html/components/home/benefits.html
+++ b/src/html/components/home/benefits.html
@@ -1,70 +1,89 @@
 <!--========BENEFITS START========  -->
-<section class="benefits">
-  <div class="container">
-    <ul class="benefits__list">
-      <li class="benefits__item">
-        <img
-          loading="lazy"
-          src="./assets/image/blog/table-with-tablet-img.jpg"
-          alt="tablet with tablet"
-        />
-        <h3 class="benefits__item-title heading-h3">
-          How we perform long-running tasks using AWS services
-        </h3>
-        <p class="benefits__item-text text-p-medium">
-          Webflow is web design tool as well as a hosting platform and CMS all
-          in one. While you are probably familiar with all of these, they are
-          usually entirely separate tools.
-        </p>
-      </li>
-      <li class="benefits__item">
-        <img
-          loading="lazy"
-          src="./assets/image/blog/office-img.jpg"
-          alt="three men talking in the office"
-        />
-        <h3
-          class="benefits__item-title benefits__item-title--underlined heading-h3"
+<section class="benefits_1 hero-decor">
+  <div class="container benefits_1__container benefits_1_1">
+    <ul class="benefits_1__list benefits_1_1_1">
+      <li class="benefits_1__item benefits_1_1_1_1">
+        <p
+          class="benefits_1__item-text text-p-default benefits_1_1_1_1_1"
+          id="benefits_1_1_1_1_1"
         >
-          How to ask when doing User Research
-        </h3>
-        <p class="benefits__item-text text-p-medium">
-          Bro, the story is that you want to make an application for buying and
-          selling goods on the market. During user research, what do you think
-          you will ask people?
+          <span
+            class="benefits_1__item-num benefits_1_1_1_1_1_1"
+            id="benefits_1_1_1_1_1_1"
+          >
+            17k
+          </span>
+          happy customers on worldwide
         </p>
       </li>
-      <li class="benefits__item">
-        <img
-          loading="lazy"
-          src="./assets/image/blog/man-working-at-the-table.jpg"
-          alt="man working at a table with charts"
-        />
-        <h3 class="benefits__item-title heading-h3">
-          Layout Exploration — Simple exercise but big effect
-        </h3>
-        <p class="benefits__item-text text-p-medium">
-          Make alternatives or other options for the design we are making. For
-          example, we are creating a website design. Then there is the
-          testimonial section.
+      <li class="benefits_1__item benefits_1_1_1_1">
+        <p
+          class="benefits_1__item-text text-p-default benefits_1_1_1_1_1"
+          id="benefits_1_1_1_1_1_1"
+        >
+          <span
+            class="benefits_1__item-num benefits_1_1_1_1_1_1"
+            id="benefits_1_1_1_1_1_1_1_1"
+          >
+            15+
+          </span>
+          Hours of work experience
         </p>
       </li>
-      <li class="benefits__item">
-        <img
-          loading="lazy"
-          src="./assets/image/blog/conference-img.jpg"
-          alt="conference man speaking"
-        />
-        <h3 class="benefits__item-title heading-h3">
-          Webflow Break the Coding Barrier
-        </h3>
-        <p class="benefits__item-text text-p-medium">
-          Webflow is web design tool as well as a hosting platform and CMS all
-          in one. While you are probably familiar with all of these, they are
-          usually entirely separate tools.
+      <li class="benefits_1__item benefits_1_1_1_1">
+        <p
+          class="benefits_1__item-text text-p-default benefits_1_1_1_1_1"
+          id="benefits_1_1_1_1_1_1_1_1_1"
+        >
+          <span
+            class="benefits_1__item-num benefits_1_1_1_1_1_1"
+            id="benefits_1_1_1_1_1_1_1_1_1_1"
+          >
+            15+
+          </span>
+          Creativity & passionate members
+        </p>
+      </li>
+
+      <li class="benefits_1__item benefits_1_1_1_1">
+        <p
+          class="benefits_1__item-text text-p-default benefits_1_1_1_1_1"
+          id="benefits_1_1_1_1_1_1_1_1_1_1_1"
+        >
+          <span
+            class="benefits_1__item-num benefits_1_1_1_1_1_1"
+            id="benefits_1_1_1_1_1_1_1_1_1_1_1_1"
+          >
+            100+
+          </span>
+          Integrations lorem ipsum integrations
         </p>
       </li>
     </ul>
+    <img
+      loading="lazy"
+      class="benefits_1__img benefits_1_1_1_1_1_1_1"
+      src="./assets/image/benefits_1_img_1.jpg"
+      width="1200"
+      height="536"
+      alt="Group of people"
+    />
+    <div class="benefits_1__info benefits_1_1_1_1_1_1_1_1">
+      <h2
+        class="benefits_1__title heading-h2 benefits_1_1_1_1_1_1_1_1_1"
+        id="benefits_1_1_1_1_1_1_1_1_1_1_1_1_1"
+      >
+        Lift your business to new heights with our digital marketing services
+      </h2>
+      <p
+        class="benefits_1__desc text-p-medium benefits_1_1_1_1_1_1_1_1_1_1"
+        id="benefits_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+      >
+        To build software that gives customer facing teams in small and
+        medium-sized businesses the ability to create rewarding and long-lasting
+        relationships with customers
+      </p>
+    </div>
   </div>
 </section>
 <!--========BENEFITS END========  -->
