--- a/src/scss/components/home/benefits.scss
+++ b/src/scss/components/home/benefits.scss
@@ -1,86 +1,138 @@
 // <!--========BENEFITS START========  -->
-.benefits {
-  padding: 120px 0;
-  background-color: var(--black-bg-color);
+/* stylelint-disable-next-line selector-class-pattern */
+.benefits_1 {
+  &__container {
+    border-bottom: 1px solid var(--neutral-color-30);
+    padding-top: 66px;
+    padding-bottom: 166px;
 
-  @include small-mobile {
-    padding: 90px 0;
+    @include mobile {
+      padding-top: 26px;
+      padding-bottom: 70px;
+    }
   }
 
   &__list {
-    display: grid;
-    gap: 0 32px;
-    grid-template-columns: repeat(2, 1fr);
+    @include flex-align-center;
+
+    @include tablet {
+      gap: 62px;
+      flex-wrap: wrap;
+      justify-content: center;
+      text-align: center;
+    }
 
     @include small-tablet {
-      gap: 90px;
-      justify-items: center;
-      grid-template-columns: 1fr;
+      gap: 45px;
     }
 
     @include mobile {
-      gap: 65px;
+      gap: 35px;
     }
   }
 
   &__item {
-    display: inline-block;
-    max-width: 584px;
+    @include tablet {
+      justify-content: center;
+      min-width: 325px;
+    }
 
-    &:nth-child(4n + 1),
-    &:nth-child(4n + 4) {
-      max-height: 991px;
+    @include mobile {
+      min-width: 240px;
+    }
 
-      @include mini-desktop {
-        max-height: 791px;
-      }
+    &:not(:last-child) {
+      @include flex-align-center;
+      padding-right: 72px;
 
       @include tablet {
-        max-height: 691px;
+        padding-right: 0;
       }
 
-      @include small-tablet {
-        max-height: 991px;
-      }
-    }
+      &::after {
+        content: '';
+        display: inline-block;
+        width: 1px;
+        height: 99px;
+        background-color: var(--neutral-color-40);
 
-    &:nth-child(4n + 3) {
-      margin-top: 236px;
-
-      @include mini-desktop {
-        margin-top: 202px;
-      }
-
-      @include tablet {
-        margin-top: 174px;
-      }
-
-      @include small-tablet {
-        margin-top: 0;
+        @include tablet {
+          display: none;
+        }
       }
     }
 
-    & img {
-      margin-bottom: 24px;
-    }
-
-    &-title {
-      margin-bottom: 24px;
+    &-num {
+      display: block;
+      margin-bottom: 8px;
       font-weight: 600;
-      color: #fff;
+      font-size: 64px;
+      line-height: 1.2;
+      color: var(--neutral-color-100);
 
-      &--underlined {
-        font-weight: 600;
-        text-decoration: underline;
-        color: #fff;
-        text-decoration-skip-ink: none;
+      @include tablet {
+        font-size: 58px;
+      }
+
+      @include mobile {
+        font-size: 48px;
+      }
+
+      @include small-mobile {
+        font-size: 42px;
       }
     }
 
     &-text {
       font-weight: 500;
+      font-size: 18px;
       line-height: 1.78;
       color: var(--neutral-color-150);
+    }
+  }
+
+  &__list,
+  &__img {
+    margin-bottom: 80px;
+
+    @include mobile {
+      margin-bottom: 45px;
+    }
+  }
+
+  &__img {
+    @include tablet {
+      margin-bottom: 55px;
+    }
+
+    @include mobile {
+      margin-bottom: 45px;
+    }
+  }
+
+  &__info {
+    @include flex-justify-between;
+
+    @include tablet {
+      gap: 25px;
+      flex-direction: column;
+    }
+  }
+
+  &__title {
+    font-weight: 600;
+    letter-spacing: -0.04em;
+    color: var(--neutral-color-100);
+  }
+
+  &__desc {
+    max-width: 421px;
+    font-weight: 500;
+    line-height: 1.78;
+    color: var(--neutral-color-150);
+
+    @include tablet {
+      max-width: 700px;
     }
   }
 }
