Finished contact section naming with _1 and renamed image

--- a/src/html/components/home/contact.html
+++ b/src/html/components/home/contact.html
@@ -1,99 +1,122 @@
 <!--========CONTACT START========  -->
-<section class="contact" id="get-started">
-  <div class="container contact__container">
-    <div class="contact__form-wrapper">
-      <h3 class="contact__form-title heading-h4">
+<section class="contact_1 contact_1_1" id="get-started">
+  <div class="container contact_1__container contact_1_1_1">
+    <div class="contact_1__form-wrapper contact_1_1_1_1">
+      <h3
+        class="contact_1__form-title heading-h4 contact_1_1_1_1_1"
+        id="contact_1_1_1_1_1_text"
+      >
         Let’s level up your brand
       </h3>
-      <p class="contact__form-text text-p-medium">
+      <p class="contact_1__form-text text-p-medium contact_1_1_1_1_1_1">
         You can reach us anytime
         <a
-          class="contact__form-link"
+          class="contact_1__form-link contact_1_1_1_1_1_1_1"
           href="mail:hellosansbrothers@gmail.com"
+          id="contact_1_1_1_1_1_1_1_text"
         >
           hellosansbrothers@gmail.com
         </a>
       </p>
-      <form class="contact__form" id="form">
-        <div class="contact__form-top">
-          <label class="contact__form-label text-p-small">
-            <span class="contact__form-label-text text-p-small">
+      <form class="contact_1__form contact_1_1_1_1_1_1_1_1" id="form">
+        <div class="contact_1__form-top contact_1_1_1_1_1_1_1_1_1">
+          <label
+            class="contact_1__form-label text-p-small contact_1_1_1_1_1_1_1_1_1_1"
+          >
+            <span
+              class="contact_1__form-label-text text-p-small contact_1_1_1_1_1_1_1_1_1_1_1"
+              id="contact_1_1_1_1_1_1_1_1_1_1_1_text"
+            >
               First name
             </span>
             <input
               type="text"
               id="first-name"
               required
-              class="contact__form-input text-p-small contact__form-input--small"
+              class="contact_1__form-input text-p-small contact_1_1_1_1_1_1_1_1_1_1_1_1"
               name="first name"
               placeholder="First name"
             />
-            <small class="contact__form-label-error"></small>
-          </label>
-          <label class="contact__form-label text-p-small">
-            <span class="contact__form-label-text text-p-small">
-              Last name
-            </span>
-            <input
-              type="text"
-              required
-              class="contact__form-input text-p-small contact__form-input--small"
-              name="last name"
-              id="last-name"
-              placeholder="Last name"
-            />
-            <small class="contact__form-label-error"></small>
+            <small
+              class="contact_1__form-label-error contact_1_1_1_1_1_1_1_1_1_1_1_1_1"
+            ></small>
           </label>
         </div>
-        <label class="contact__form-label text-p-small">
-          <span class="contact__form-label-text text-p-small"> Email </span>
+        <label
+          class="contact_1__form-label text-p-small contact_1_1_1_1_1_1_1_1_1_1"
+        >
+          <span
+            class="contact_1__form-label-text text-p-small contact_1_1_1_1_1_1_1_1_1_1_1"
+            id="contact_1_1_1_1_1_1_1_1_1_1_1_1_text"
+          >
+            Email
+          </span>
           <input
             type="email"
             required
-            class="contact__form-input text-p-small"
+            class="contact_1__form-input text-p-small contact_1_1_1_1_1_1_1_1_1_1_1_1"
             name="email"
             id="email"
             placeholder="you@company.com"
           />
-          <small class="contact__form-label-error"></small>
+          <small
+            class="contact_1__form-label-error contact_1_1_1_1_1_1_1_1_1_1_1_1_1"
+          ></small>
         </label>
-        <label class="contact__form-label text-p-small">
-          <span class="contact__form-label-text text-p-small">
+        <label
+          class="contact_1__form-label text-p-small contact_1_1_1_1_1_1_1_1_1_1"
+        >
+          <span
+            class="contact_1__form-label-text text-p-small contact_1_1_1_1_1_1_1_1_1_1_1"
+            id="contact_1_1_1_1_1_1_1_1_1_1_1_text"
+          >
             Phone number
           </span>
           <input
             id="phone"
             type="tel"
             required
-            class="contact__form-input text-p-small"
+            class="contact_1__form-input text-p-small contact_1_1_1_1_1_1_1_1_1_1_1_1"
             name="phone"
             itemid="phone"
             placeholder=""
           />
-          <small class="contact__form-label-error"></small>
+          <small
+            class="contact_1__form-label-error contact_1_1_1_1_1_1_1_1_1_1_1_1_1"
+          ></small>
         </label>
-        <label class="contact__form-label text-p-small">
-          <span class="contact__form-label-text text-p-small">
+        <label
+          class="contact_1__form-label text-p-small contact_1_1_1_1_1_1_1_1_1_1"
+        >
+          <span
+            class="contact_1__form-label-text text-p-small contact_1_1_1_1_1_1_1_1_1_1_1"
+            id="contact_1_1_1_1_1_1_1_1_1_1_1_1_text"
+          >
             Message
           </span>
           <textarea
             type="text"
             maxlength="600"
-            class="contact__form-input contact__form-input--textarea text-p-small"
+            class="contact_1__form-input contact_1__form-input--textarea text-p-small contact_1_1_1_1_1_1_1_1_1_1_1_1"
             name="messaget"
             placeholder="Leave us a message..."
           ></textarea>
         </label>
-        <button class="contact__form-btn button-form">Get Starded</button>
+        <button
+          class="contact_1__form-btn button-form contact_1_1_1_1_1_1_1_1_1_1_1_1_1"
+          id="contact_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+        >
+          Get Starded
+        </button>
       </form>
     </div>
     <img
       loading="lazy"
-      src="/assets/image/get-started-img.jpg"
-      class="contact__img"
+      src="/assets/image/contact_1_img_1.jpg"
+      class="contact_1__img contact_1_1_1_1_1"
       width="987"
       height="885"
-      alt="A woman and a man high-five each other"
+      alt=""
     />
   </div>
 </section>
