--- a/src/scss/components/home/contact.scss
+++ b/src/scss/components/home/contact.scss
@@ -1,5 +1,6 @@
 // <!--========CONTACT START========  -->
-.contact {
+/* stylelint-disable-next-line selector-class-pattern */
+.contact_1 {
   padding: 76px 0 160px;
 
   @include mobile {
